# VPracticaN2

./: CMakeLists.txt
Practica3/Practica3/: Vejercicio3.c  aleatorio.c  aleatorio.h  ejercicio1.c  ejercicio2.c
Practica4/: CMakeLists.txt  extension.c  extension.h  main.c
Practica5/: combinaciones.c  combinaciones.h  ejercicio17.c  ejercicio2.c  ejercicio5.c  main.c  menu.c  menu.h
Practica5/Practica6/: Practica6_practica6 at master · GabrielNunez6_Practica6.html  aleatorio.c  combinaciones.c  combinaciones.h  combinacionesVectores.c  combinacionesVectores.h  dados.c  dados.h  ejercicio2.c  ejercicio3.c  p6.c
Practica7/: BarajaInglesa.c  BarajaInglesa.h  Poker3Card.c  Poker3Card.h  poker.c
Practica7/poker3card/: BarajaInglesa.c  BarajaInglesa.h  Poker3Card.c  Poker3Card.h  Poker3CardEjercicioFunciones.c  funcionesDelPoker.c  funcionesDelPoker.h  menupoker.c  menupoker.h  poker.c
Practica8/: MenuCadena.c  MenuCadena.h  cadenas.c  cadenas.h  main.c  otrasFunciones.c  otrasFunciones.h
ProyectoFinal/: CMakeLists.txt  MenuLucky20.c  MenuLucky20.h  aleatorio.h  domino.c  domino.h  ganador.c  ganador.h  jugador.c  jugador.h  main.c  registroPartida.c  registroPartida.h  turnos.c  turnos.h
practica 3/: aleatorio.c
practica2/: aleatorio.h  ejercicio1.c  ejercicio2.c  ejercicio3.c  ejercicio4.c  ejercicio5.c
practica9/: cadenas.c  cadenas.h  ejercicio2.c  main.c  menu.c  menu.h  otraprueba.num  otraprueba.txt
