cmake_minimum_required(VERSION 3.28)
project(VPracticaN2 C)

set(CMAKE_C_STANDARD 11)

# Ejercicio 1
add_executable(ejercicio1
        practica2/ejercicio1.c
        practica2/aleatorio.c
)

# Ejercicio 2
add_executable(ejercicio2
        practica2/ejercicio2.c
        practica2/aleatorio.c
)
# Ejercicio 3
add_executable(ejercicio3
        practica2/ejercicio3.c
        practica2/aleatorio.c
)